--- a/CRMPhone/Dialogs/Admins/WorkerHouseAndTypeAddOrEditDialog.xaml
+++ b/CRMPhone/Dialogs/Admins/WorkerHouseAndTypeAddOrEditDialog.xaml
@@ -22,15 +22,34 @@
             <TextBlock Margin="3" VerticalAlignment="Center" Text="улица:"/>
             <ComboBox Margin="3" Width ="150" TabIndex ="2" DisplayMemberPath="NameWithPrefix" SelectedItem="{Binding SelectedStreet}" ItemsSource="{Binding StreetList}" IsEditable="True" />
             <TextBlock Margin="3" VerticalAlignment="Center" Text="дом:"/>
-            <ComboBox Margin="3" Width="65" TabIndex ="3" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedHouse}" ItemsSource="{Binding HouseList}" IsEditable="True" />
+            <ComboBox Margin="3" Width="65" VerticalAlignment="Center" ItemsSource="{Binding FilterHouseList}" IsEditable="True"
+                      IsReadOnly="True" SelectionChanged="CbOnSelectionChanged" DropDownClosed="CbOnDropDownClosed">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Margin="2">
+                            <CheckBox IsChecked="{Binding Selected}"
+                                      Width="20" />
+                            <TextBlock Text="{Binding Name}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
         </DockPanel>
         <DockPanel Grid.Row="1">
             <TextBlock Margin="3" VerticalAlignment="Center" Text="Услуга:"/>
-            <ComboBox VerticalAlignment="Center" Margin="3" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedParentService}" ItemsSource="{Binding ParentServiceList}" IsEditable="True" >
-                <ComboBox.Resources>
-                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
-                </ComboBox.Resources>
+            <ComboBox Margin="3" Width="125" VerticalAlignment="Center" ItemsSource="{Binding FilterServiceList}" IsEditable="True"
+                      IsReadOnly="True" SelectionChanged="CbOnSelectionChanged" DropDownClosed="CbOnDropDownClosed">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Margin="2">
+                            <CheckBox IsChecked="{Binding Selected}"
+                                      Width="20" />
+                            <TextBlock Text="{Binding Name}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
             </ComboBox>
+
             <TextBlock Margin="3" VerticalAlignment="Center" Text="Приоритет:"/>
             <TextBox Margin="3" Width="45" VerticalAlignment="Center"  Text="{Binding Path=Weigth}"/>
 
