--- a/CRMPhone/Controls/RequestItem.xaml
+++ b/CRMPhone/Controls/RequestItem.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModel="clr-namespace:CRMPhone.ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="320" d:DesignWidth="800"
+             d:DesignHeight="320" d:DesignWidth="800" Width="920" Height="325"
              d:DataContext="{d:DesignInstance viewModel:RequestItemViewModel}">
     <Grid>
         <Border BorderBrush="Black" CornerRadius="5" BorderThickness="1">
@@ -65,6 +65,10 @@
                 <WrapPanel Grid.Row="2" Grid.Column="0">
                 <!--<WrapPanel Grid.Row="2" Grid.Column="0" IsEnabled="{Binding CanSave}">-->
                     <TextBlock Margin="3" VerticalAlignment="Center" Text="Мастер:"/>
+                    <Button HorizontalAlignment="Right" Background="Transparent" BorderThickness="0" Command="{Binding ElementName=RequestGrid, Path=DataContext.ShowMasterInfoCommand}"
+                            CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">
+                        <Image Source="pack://application:,,,/Images/info_24.png" Height="18" />
+                    </Button>
                     <ComboBox Margin="3" IsEnabled="{Binding CanSave}" Width="125" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedMaster}" ItemsSource="{Binding MasterList}" IsEditable="True">
                         <ComboBox.Resources>
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
@@ -93,7 +97,7 @@
                 </WrapPanel>
                 <WrapPanel Grid.Row="3" Grid.Column="0">
                     <TextBlock Margin="3" VerticalAlignment="Center" Text="Примечание:"/>
-                    <TextBox Margin="3" Width="600" Height="32"
+                    <TextBox Margin="3" Width="600" Height="64"
                              SpellCheck.IsEnabled="True"
                              MaxLength="1000" 
                              TextWrapping="Wrap"
