[~] - Не принимать звонки

--- a/CRMPhone/MainWindow.xaml
+++ b/CRMPhone/MainWindow.xaml
@@ -59,17 +59,23 @@
                     </Button>
                 </WrapPanel>
                 <WrapPanel HorizontalAlignment="Center">
-                    <Button  Margin="5" Width="48" Height="48" Command="{Binding MuteCommand}" ToolTip="Микрофон" Background="{Binding MuteButtonBackground}">
+                    <Button  Margin="5" Width="36" Height="36" Command="{Binding MuteCommand}" ToolTip="Микрофон" Background="{Binding MuteButtonBackground}">
                         <Image Source="pack://application:,,,/Images/mic-mute.png" Width="24" Height="24" />
                     </Button>
-                    <Button  Margin="5" Width="48" Height="48" Command="{Binding HoldCommand}" ToolTip="Hold/UnHold">
+                    <Button  Margin="5" Width="36" Height="36" Command="{Binding HoldCommand}" ToolTip="Hold/UnHold">
                         <Image Source="pack://application:,,,/Images/hold.png" Width="24" Height="24" />
                     </Button>
-                    <Button  Margin="5" Width="48" Height="48" Command="{Binding BridgeCommand}" ToolTip="Соединить линии">
+                    <Button  Margin="5" Width="36" Height="36" Command="{Binding BridgeCommand}" ToolTip="Соединить линии">
                         <Image Source="pack://application:,,,/Images/bridgeBlack.png" Width="32" Height="32" />
                     </Button>
-                    <Button  Margin="5" Width="48" Height="48" Command="{Binding ConferenceCommand}" ToolTip="Конференция">
+                    <Button  Margin="5" Width="36" Height="36" Command="{Binding ConferenceCommand}" ToolTip="Конференция">
                         <Image Source="pack://application:,,,/Images/merge.png" Width="24" Height="24" />
+                    </Button>
+                    <Button  Margin="5" Width="36" Height="36" Command="{Binding QueuePauseCommand}" ToolTip="Не принимать звонки">
+                        <Image Source="pack://application:,,,/Images/NoAnswer.png" Width="32" Height="32" />
+                    </Button>
+                    <Button  Margin="5" Width="36" Height="36" Command="{Binding QueueUnPauseCommand}" ToolTip="Принимать звонки">
+                        <Image Source="pack://application:,,,/Images/CanAnswer.png" Width="32" Height="32" />
                     </Button>
                 </WrapPanel>
                 <StackPanel>
