--- a/CRMPhone/Dialogs/ChangeAlertTimeDialog.xaml
+++ b/CRMPhone/Dialogs/ChangeAlertTimeDialog.xaml
@@ -23,14 +23,30 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <DockPanel Grid.Row="0">
-                        <TextBlock Margin="5" VerticalAlignment="Center" Text="Выберите время:"/>
-                        <ComboBox Margin="5" HorizontalAlignment="Right" Width="185" DisplayMemberPath="Name" SelectedItem="{Binding SelectedTime}" ItemsSource="{Binding AlertTimes}" IsEditable="True">
-                            <ComboBox.Resources>
-                                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
-                            </ComboBox.Resources>
-                        </ComboBox>
-                    </DockPanel>
+                    <StackPanel Grid.Row="0">
+                        <RadioButton GroupName="SelectType" Margin="5" IsChecked="{Binding ByTime}">
+                            <DockPanel IsEnabled="{Binding ByTime}">
+                                <TextBlock VerticalAlignment="Center" Text="Выберите время:"/>
+                                <ComboBox Margin ="5,0" HorizontalAlignment="Right" Width="145" DisplayMemberPath="Name" SelectedItem="{Binding SelectedTime}" ItemsSource="{Binding AlertTimes}" IsEditable="True">
+                                    <ComboBox.Resources>
+                                        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
+                                    </ComboBox.Resources>
+                                </ComboBox>
+                            </DockPanel>
+                        </RadioButton>
+                        <RadioButton GroupName="SelectType" Margin="5" IsChecked="{Binding ByDate}">
+                            <DockPanel IsEnabled="{Binding ByDate}">
+                                    <TextBlock VerticalAlignment="Center" Text="Выберите дату:"/>
+                                <DatePicker Margin ="5,0" SelectedDate="{Binding SelectedDate}"></DatePicker>
+                                <ComboBox Margin ="5,0" HorizontalAlignment="Right" Width="120" DisplayMemberPath="Name" SelectedItem="{Binding SelectedDateTime}" ItemsSource="{Binding AlertDateTimes}" IsEditable="True">
+                                    <ComboBox.Resources>
+                                        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
+                                    </ComboBox.Resources>
+                                </ComboBox>
+                            </DockPanel>
+                        </RadioButton>
+
+                    </StackPanel>
                     <DockPanel Grid.Row="1" HorizontalAlignment="Right">
                         <Button Margin="5" Width="120" Height="24" Command="{Binding Path=SaveCommand}">Ok</Button>
                         <Button Margin="5" Width="120" Height="24" Command="{Binding Path=CancelCommand}">Отмена</Button>
