--- a/CRMPhone/Dialogs/WorkerInfoDialog.xaml
+++ b/CRMPhone/Dialogs/WorkerInfoDialog.xaml
@@ -4,33 +4,30 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModel="clr-namespace:CRMPhone.ViewModel"
+        xmlns:dto="clr-namespace:RequestServiceImpl.Dto;assembly=RequestServiceImpl"
         mc:Ignorable="d"
         Title="Информация" Height="320" Width="520" MinWidth ="520" MinHeight="320"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow"
-        d:DataContext="{d:DesignInstance viewModel:NoteDialogViewModel}">
+        d:DataContext="{d:DesignInstance viewModel:WorkerInfoViewModel}">
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <WrapPanel Grid.Row="0" Visibility="Collapsed">
-            <Button Width="100" Margin ="5" Content="Добавить" Command="{Binding AddCommand}"/>
-            <Button Width="100" Margin ="5" Content="Удалить" Command="{Binding DeleteCommand}"/>
-        </WrapPanel>
-        <DataGrid Name="SpecialityGrid" Grid.Row ="1" 
+        <DataGrid Name="WorkersGrid" Grid.Row ="1" 
                   AutoGenerateColumns="False"
-                  ItemsSource="{Binding Path=NoteList}"
+                  ItemsSource="{Binding Path=WorkersList}"
                   SelectionMode="Single"
                   SelectionUnit="FullRow"
-                  SelectedItem="{Binding Path=SelectedNoteItem}"
+                  SelectedItem="{Binding Path=SelectedWorker}"
                   IsReadOnly="True"
                   HorizontalScrollBarVisibility="Auto"
                   VerticalScrollBarVisibility="Auto">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Дата" Width="*"
-                                    Binding="{Binding Path=Date, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}">
+                <DataGridTextColumn Header="Должность" Width="*"
+                                    Binding="{Binding Path=SpecialityName}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="TextWrapping" Value="Wrap"/>
@@ -38,8 +35,8 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="Комментарий" Width="*"
-                                    Binding="{Binding Path=Note}">
+                <DataGridTextColumn Header="ФИО" Width="*"
+                                    Binding="{Binding Path=FullName}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="TextWrapping" Value="Wrap"/>
@@ -47,8 +44,8 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="Создатель" Width="*"
-                                    Binding="{Binding Path=User.FullName}">
+                <DataGridTextColumn Header="Телефон" Width="*"
+                                    Binding="{Binding Path=Phone}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="TextWrapping" Value="Wrap"/>
@@ -56,6 +53,27 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
+
+                <DataGridTemplateColumn Width="50" >
+                    <DataGridTemplateColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="ContentTemplate">
+                                <Setter.Value>
+                                    <DataTemplate>
+                                        <TextBlock Text="Звонок" />
+                                    </DataTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </DataGridTemplateColumn.HeaderStyle>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate DataType="dto:WorkerDto">
+                            <Button Width="20" Command="{Binding ElementName=WorkersGrid, Path=DataContext.DialCommand}" CommandParameter="{Binding ElementName=WorkersGrid, Path=SelectedItem}">
+                                <Image Source="pack://application:,,,/Images/answer.png"/>
+                            </Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
 
