--- a/CRMPhone/Controls/RequestControl.xaml
+++ b/CRMPhone/Controls/RequestControl.xaml
@@ -180,6 +180,7 @@
                 </StackPanel>
                 <Button Width="80" Margin="5" Background ="LightGreen" Content="Применить" Command="{Binding RefreshRequestCommand}"/>
                 <Button Width="80" Margin="5" Content="Экспорт" Command="{Binding ExportRequestCommand}"/>
+                <Button Width="80" Margin="5" Content="Акты" Command="{Binding PrintActsCommand}"/>
                 <Button Width="120" Margin="5" Content="Сброс фильтров" Command="{Binding ClearFiltersCommand}"/>
                 <TextBlock Margin="35,3,3,3" VerticalAlignment="Center" Text="Заявок:"/>
                 <TextBlock Margin="3,3,3,3" FontWeight="Bold" VerticalAlignment="Center" Text="{Binding RequestCount}"/>
