[~] - Выгрузка списка обзвона + изменение статуса в вебе

--- a/CRMPhone/Controls/Admins/RingUpAdminControl.xaml
+++ b/CRMPhone/Controls/Admins/RingUpAdminControl.xaml
@@ -132,8 +132,67 @@
                 </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <StackPanel Grid.Row="2">
             <!--<TextBlock Text="Подробно:"/>-->
-            </StackPanel>
+        <DockPanel Grid.Row="2" HorizontalAlignment="Right">
+        <Button  Margin="5" Padding ="5,0" Height="24" Content="Экспорт" Command="{Binding ExportCommand}"/>
+        </DockPanel>
+        <DataGrid Name="RingUpInfoGrid" Grid.Row ="3"
+                          AutoGenerateColumns="False"
+                          ItemsSource="{Binding Path=RingUpInfoList}"
+                          SelectionMode="Single"
+                          SelectionUnit="FullRow"
+                          IsReadOnly="True"
+                          HorizontalScrollBarVisibility="Auto"
+                          VerticalScrollBarVisibility="Auto">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Телефон" Width="120"
+                             Binding="{Binding Path=Phone}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                            <Setter Property="Margin" Value="3"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Время звонка" Width="120"
+                                    Binding="{Binding Path=LastCallTime, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                            <Setter Property="Margin" Value="3"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Продолжительность" Width="160"
+                             Binding="{Binding Path=LastCallLength}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                            <Setter Property="Margin" Value="3"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Попыток" Width="80"
+                             Binding="{Binding Path=CalledCount}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                            <Setter Property="Margin" Value="3"/>
+
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Результат" Width="110"
+                             Binding="{Binding Path=DoneCalls}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                            <Setter Property="Margin" Value="3"/>
+
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+            </DataGrid.Columns>
+            </DataGrid>
     </Grid>
 </UserControl>
